[gd_scene load_steps=24 format=3 uid="uid://7d2k28hkfrf3"]

[ext_resource type="Script" path="res://Scripts/titlescreen.gd" id="1_2ryxy"]
[ext_resource type="Texture2D" uid="uid://6607kqxdn6cg" path="res://Grafik/Bush.webp" id="2_0w4tk"]
[ext_resource type="Texture2D" uid="uid://bxjeocmqembvk" path="res://Grafik/Button-Sheet.webp" id="2_vv332"]
[ext_resource type="FontFile" uid="uid://c18owl8guvbr5" path="res://Assets/PixelifySans-VariableFont_wght.ttf" id="3_6v5oj"]
[ext_resource type="Texture2D" uid="uid://b7rmoffleos4i" path="res://Grafik/Button_Pressed-Sheet.webp" id="3_48bon"]
[ext_resource type="Texture2D" uid="uid://b66abpu14px4o" path="res://Grafik/Logo_furs_Game.webp" id="5_5at5p"]
[ext_resource type="PackedScene" uid="uid://bfnfpt64lq3gd" path="res://fader.tscn" id="7_x1x0l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wsuit"]
texture = ExtResource("2_0w4tk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fj6y4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_svgha"]
texture = ExtResource("3_48bon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lo2si"]
texture = ExtResource("3_48bon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8bb8i"]
texture = ExtResource("2_vv332")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u7b25"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ex7a7"]
texture = ExtResource("3_48bon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4uycj"]
texture = ExtResource("3_48bon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_flvgy"]
texture = ExtResource("2_vv332")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yk280"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7bj1s"]
texture = ExtResource("3_48bon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tm5nb"]
texture = ExtResource("3_48bon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ialvc"]
texture = ExtResource("2_vv332")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oih13"]
texture = ExtResource("3_48bon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mq5f4"]
texture = ExtResource("3_48bon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1pdyh"]
texture = ExtResource("2_vv332")

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_2ryxy")

[node name="Hintergrund" type="Panel" parent="."]
offset_right = 512.0
offset_bottom = 288.0
theme_override_styles/panel = SubResource("StyleBoxTexture_wsuit")
metadata/_edit_use_anchors_ = true

[node name="StartKnopf" type="Button" parent="."]
offset_left = 182.0
offset_top = 121.0
offset_right = 317.0
offset_bottom = 166.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_6v5oj")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_fj6y4")
theme_override_styles/hover = SubResource("StyleBoxTexture_svgha")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lo2si")
theme_override_styles/normal = SubResource("StyleBoxTexture_8bb8i")
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="OptionenKnopf" type="Button" parent="."]
offset_left = 114.0
offset_top = 175.0
offset_right = 249.0
offset_bottom = 220.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_6v5oj")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_u7b25")
theme_override_styles/hover = SubResource("StyleBoxTexture_ex7a7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4uycj")
theme_override_styles/normal = SubResource("StyleBoxTexture_flvgy")
text = "Options"
metadata/_edit_use_anchors_ = true

[node name="ExitKnopf" type="Button" parent="."]
offset_left = 182.0
offset_top = 229.0
offset_right = 317.0
offset_bottom = 274.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_6v5oj")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_yk280")
theme_override_styles/hover = SubResource("StyleBoxTexture_7bj1s")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tm5nb")
theme_override_styles/normal = SubResource("StyleBoxTexture_ialvc")
text = "Exit
"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(279, 75)
scale = Vector2(0.512381, 0.512381)
texture = ExtResource("5_5at5p")

[node name="CreditsKnopf" type="Button" parent="."]
offset_left = 256.0
offset_top = 174.0
offset_right = 393.0
offset_bottom = 220.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_6v5oj")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxTexture_oih13")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mq5f4")
theme_override_styles/normal = SubResource("StyleBoxTexture_1pdyh")
text = "Credits"

[node name="Fader" parent="." instance=ExtResource("7_x1x0l")]
visible = false
offset_left = -8.0
offset_top = -13.0
offset_right = 524.0
offset_bottom = 295.0

[connection signal="pressed" from="StartKnopf" to="." method="_on_start_knopf_pressed"]
[connection signal="pressed" from="OptionenKnopf" to="." method="_on_optionen_knopf_pressed"]
[connection signal="pressed" from="ExitKnopf" to="." method="_on_exit_knopf_pressed"]
[connection signal="pressed" from="CreditsKnopf" to="." method="_on_credits_knopf_pressed"]
